# adk-project-final

./: .dockerignore  .env_sample  .gitignore  DEPLOY.md  Dockerfile  README.md  SPEC.md  agent.py  cloudbuild.yaml  deploy_from_env.sh  env-sample  main.py  pyproject.toml  review_ver3_claude.md  run_local.sh  scenario_results.json  test_results.json
allowed_dir/: test.txt
app/.adk/: session.db
app/agent/: root.py  sub_agents.py  workflows.py
app/api/: __init__.py  executor.py  main.py
app/api/routes/: health.py  query.py
app/api/schemas/: request.py  response.py
app/config/: settings.py
app/mcp/: __init__.py  toolsets.py
app/prompt/: __init__.py  instructions.py
app/scripts/: create_agent_engine.py
app/services/: chat_cli.py  runtime_logging.py
app/tool/: __init__.py  callbacks.py
app/util/: tool.py
docs/: PRESENTATION_DEV.md
tests/: run_scenario.py  test_api_health.py  test_api_query.py  test_callbacks.py  test_settings.py  test_workflow_contracts.py
tests/integration/: test_docu_summary.py
tests/integration/fixture/: long_text.test.json  off_topic.test.json  test_config.json
ui/: index.html  vite.config.ts
ui/src/: App.tsx  index.css
