[project]
name = "adk-project-mcp"
version = "0.1.0"
description = "Google ADK multi-agent CLI with GitHUB MCP,  and VertexAI session memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "google-adk[eval]>=1.16.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-json-report>=1.5.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
